<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="startup.SplashActivity"
    android:background="@drawable/shantytown">

    <TextView
        android:text="@string/title_activity_splash"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crumbSplash"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/requestGameName"
        android:background="#ffffffff"
        android:padding="10dp"
        android:layout_below="@+id/showGameName"
        android:id="@+id/startSplash" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startSplash"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:text=""
        android:background="#ffffffff"
        android:ems="12"
        android:id="@+id/inputGameName" />

    <Button
        android:text="@string/splashSave"
        android:layout_below="@id/inputGameName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave" />

    <TextView
        android:text="@string/greetingGamer"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/showGameName"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/splashContinue"
        android:layout_below="@id/btnSave"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGotoStory" />
</RelativeLayout>
