<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_above="@id/footer"
    android:layout_below="@id/header"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="0dp"
    android:layout_margin="0dp"
    tools:context=".FragmentBusiness"
    android:id="@+id/fragment_business"
    >

    <TextView
        android:text="@string/title_fragment_business"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/crumbMain"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
    android:id="@+id/btnFooterRail"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="450dp">
    <Button
        android:text="@string/btnGoMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/btnGotoMain"
        android:onClick="selectFrag" />

    <Button
        android:text="@string/btnGoBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:id="@+id/btnGotoBusiness"
        android:onClick="selectFrag" />

</LinearLayout>
</RelativeLayout>